--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
     "morgan": "^1.10.0",
-    "mysql2": "^3.1.1"
+    "mysql2": "^3.1.1",
+    "pg": "^8.10.0"
   }
 }
